--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -11,22 +11,21 @@ In this section, we provide an overview of methods used to develop LRPs for our 
 
 We consider two types of LRPs based on two different metrics:
 
-1) Proportion-based LRPs, which are based on the proportion of CUs within an SMU that are assessed as being above 'poor' status. We assume that in order for an SMU to remain above its proportion-based LRP, 100% of CUs must have status estimates above poor. <!--CH: I see "poor" is used consistently in this chapter, and is defined the paragraph below. However, I've used "red status" in the Guidelines paper as poor can be ambiguous at times. I just worry about introducing a new term, 'poor', into the lexicon for salmon assessments, with many opportunities for misinterpretation. Perhaps it's okay to say 'red status', as long as we're clear than lower benchmark is a proxy for red status when WSP assessments or the rapid multidimensional scanner tool is not possible/available?-->
+1) Proportion-based LRPs, which are based on the proportion of CUs within an SMU that are assessed as being above the red WSP status zone. We assume that in order for an SMU to remain above its proportion-based LRP, 100% of CUs must have status estimates above red (i.e., either amber or green).
 
 2) Aggregate abundance-based LRPs, which are based on total SMU-level spawning abundance. 
 
 While aggregate abundance-based LRPs are consistent with what is typically used for marine fish species, proportion-based LRPs have been proposed for Pacific salmon to align with DFO's Wild Salmon Policy. 
 
-When developing aggregate abundance-based LRP options for salmon SMUs, we aim to maintain consistency with the WSP by defining LRPs as aggregate abundance levels that have a high probability of all CUs being above poor status. We use two different methods to identify these levels: (i) Logistic regression-based LRPs and (ii) Projection-based LRPs. More detailed descriptions of these methods are provided in the following sections, while guidance on when and how proportion-based and aggregate abundance-based LRPs should be applied is provided in Holt et al. (in review). We do not recommend that users apply any of the methods described in this case study paper without first consulting Holt et al. (in review). While aggregate-abundance based LRPs can be used as part of, or to inform harvest control rules for fisheries management, more complex harvest control rules that include for example, time-area closures to limit CU-specific harvests may better achieve the underlying objective of maintaining CU statuses above red (as described in Holt et al. (in review))
+WSP assessments are typically intensive expert-driven processes and have only been completed for a small subset of CUs to date.  We demonstrate the application of a rapid multidimensional scanning tool that is being developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP (Pestal et al., in prep). Applying this tool allows us to generate up-to-date estimates of CU status for all of our case study applications, and is recommended as a tool for defining LRPs in our companion working paper (Holt et al., in review).  <!-- KH (Nov 19): I just added this previous sentence--> When developing aggregate abundance-based LRPs, we also consider cases in which CU status is based on spawning abundance relative to a single lower benchmark that has been identified as important by local experts. While the rapid multidimensional scanning tool better captures the multiple dimensions that are used to inform biological status under the WSP (e.g., abundances, short-term and long-term trends), we compare it to status derived from a single metric relative to a lower benchmark to demonstrate how in many cases the rapid multidimensional scanning tool reduces to this metric. Exceptions are described in the application to case studies. A variety of methods are available for estimating lower benchmarks on abundances depending on species and data availability [@holtIndicatorsStatusBenchmarks2009; @holtEvaluatingBenchmarksBiological2018; @grant2017FraserSockeye2020], as described in Holt et al. (in review). 
 
-The above definitions hinge on what defines 'poor' CU status. In the case of WSP status assessments, in which multiple metrics are combined to assign CU status, poor status corresponds with the 'red' status zone [@dfoCanadaPolicyConservation2005; @grant2017FraserSockeye2020]. While WSP assessments are typically intensive expert-driven processes, we demonstrate the application of a rapid multidimensional scanning tool that is being developed by DFO's State of the Salmon Program to rapidly assess CU status under the WSP (Pestal et al., in prep). When developing aggregate abundance-based LRPs, we also consider cases in which CU status is based on spawning abundance relative to a single lower benchmark that has been identified as important by local experts. While the rapid multidimensional scanning tool better captures the multiple dimensions that are used to inform biological status under the WSP (e.g., abundances, short-term and long-term trends), we compare it to status derived from a single metric relative to a lower benchmark to demonstrate how in many cases the rapid multidimensional scanning tool reduces to this metric. Exceptions are described in the application to case studies. A variety of methods are available for estimating lower benchmarks on abundances depending on species and data availability [@holtIndicatorsStatusBenchmarks2009; @holtEvaluatingBenchmarksBiological2018; @grant2017FraserSockeye2020], as described in Holt et al. (in review). 
+When developing aggregate abundance-based LRP options for salmon SMUs, we aim to maintain consistency with the WSP by defining LRPs as aggregate abundance levels that have a high probability of all CUs being above red status. We use two different methods to identify these levels: (i) Logistic regression-based LRPs and (ii) Projection-based LRPs. More detailed descriptions of these methods are provided in the following sections, while guidance on when and how proportion-based and aggregate abundance-based LRPs should be applied is provided in Holt et al. (in review). We do not recommend that users apply any of the methods described in this case study paper without first consulting Holt et al. (in review). While aggregate-abundance based LRPs can be used as part of, or to inform harvest control rules for fisheries management, more complex harvest control rules that include for example, time-area closures to limit CU-specific harvests may better achieve the underlying objective of maintaining CU statuses above red (as described in Holt et al. (in review))
 
-<!-- Is it also fair to say that we use single benchmarks for simplicity in aggregate abundance-based methods?? - note that we also could have done logistic regressions on multi-dimesnional status - but we didn;t.  Perhaps something for a discussion / extension ??? -->
- 
 <!--
-  CW: Reference, is the WSP author DFO or Canada? I have seen it cited in both ways in CSAS papers, and I think I was using the DFO version as it is what Julie Marentette used in her 2021 papers.-- should I change it to the canada citation  (@canadaCanadaPolicyConservation2005) ?
-KH: I like DFO better too. Looks like both versions are it the bib file.  I have switched to using the DFO one for my citation.
--->
+KH (Nov 19): removing below test as we are no longer using 'poor'
+The above definitions hinge on what defines 'poor' CU status. In the case of WSP status assessments, in which multiple metrics are combined to assign CU status, poor status corresponds with the 'red' status zone [@dfoCanadaPolicyConservation2005; @grant2017FraserSockeye2020]. 
+
+--> 
 
 
 ## PROPORTION-BASED LRPS
@@ -35,23 +34,12 @@ A proportion-based LRP is simply the proportion of CUs required to be assessed a
 
 We compare three different methods of assessing CU status when using proportion-based LRPs: (i) the proportion of CUs with a recent WSP status assessment above the red zone (e.g., @grant2017FraserSockeye2020), (ii) the proportion of CUs with a recent rapid multidimensional status assessment above red (see below for more details), and (iii) the proportion of CUs with status estimated to be below a single type of CU lower benchmark (e.g., $S_{gen}$, percentile-based benchmarks, etc.). While we recommend applying methods (i) or (ii), approach (iii) is shown for comparison purposes to demonstrate consistency between rapid multidimensional status assessments and statuses derived from abundances relative to lower benchmarks.
 
-When assessing CU status relative to a single abundance-based lower benchmark in approach (iii), we use generational mean spawner abundances as a basis for determining whether each CU is above or below its lower benchmark. Generational smoothing integrates status over cohorts within a generation, which are generally independent of each other because of the anadromous, semelparous life-history of Pacific salmon and the dominance of a single age-at-maturity for many stocks. <!--CH: I added the previous sentence, okay?-->This approach reduces noise in annual CU status determination due to annual fluctuations in CU abundances from any single cohort. It also makes our determination of CU status consistent with the approach taken for abundance-based benchmarks in WSP assessments and the rapid multidimensional scanning tool. <!--CH suggestion: "Generational smoothing introduces autocorrelation into annual status, where status in a given year depends on the status in the previous year." This sets us up for why we don't use it below for aggregate-abundance based LRPs-->
+When assessing CU status relative to a single abundance-based lower benchmark in approach (iii), we use generational mean spawner abundances as a basis for determining whether each CU is above or below its lower benchmark. Generational smoothing integrates status over cohorts within a generation, which are generally independent of each other because of the anadromous, semelparous life-history of Pacific salmon and the dominance of a single age-at-maturity for many stocks. This approach reduces noise in annual CU status determination due to annual fluctuations in CU abundances from any single cohort. It also makes our determination of CU status consistent with the approach taken for abundance-based benchmarks in WSP assessments and the rapid multidimensional scanning tool.
 
 
 ### Rapid Multidimensional Scanning Tool{#rapidToolMethods}
 
-<!--CH: can we keep name consistent, perhaps "Rapid Multidimensional Scanning Tool" -->
-
-<!-- Note from Sue:
-
-For multi-dimensional status, we are using the term ‘lower benchmark’ to be Red status zone for the CU. Not entirely a correct usage of this term, but applies it to the language used for LRP triggers of rebuilding plans.
-
-CW: I have been using lower benchmark for CUs and LRPs for SMUs -- Not sue if that is appropriate either. But if we decide to adopr this language, it may be good to say it explicitly in the overview section above?
-
-CH: I suggest we avoid "below lower benchmark" except for the specific analysis (iii) above, otherwise we use "red zone".
--->
-
-One of the methods we consider to estimate CU status for proportion-based LRP relies on a method of rapidly assessing CU status using multidimensional algorithms.  We implement this approach using a scanner tool that has recently been developed by DFO's State of the Salmon Program (@pestalAlgorithmsRapidStatus2021, in prep). The scanning tool is intended to support implementation of Canada's WSP by approximating the outcomes of full WSP Integrated Status Assessments on an more regular basis than the time-intensive WSP assessment approach allows. The rapid multidimensional scanning tool was developed using Classification and Regression Tree (CART) analyses to create algorithms that approximate the status of the integrated assessments.  Data inputs and outcomes from thee WSP assessment processes were used in CART analyses: Fraser River sockeye, Interior Fraser coho, and Southern BC Chinook [@dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @dfo2017FraserSockeye2018;  @grant2017FraserSockeye2020], and was further ground-truthed with data for Fraser River Chum and Pink Salmon (Pestal et al. in prep ).  <!--CH comment: may need to change the pestal citation to S. Grant, pers comm.  I'm not sure how much the Pink and Chum work will be captured in the report?-->. Essentially, the scanning tool uses a decision tree to estimate CU status based on data type, quality, abundance, and trends (e.g., Figure \@ref(fig:decision-tree)). An expert review of rapid status results for each CU is intended to be incorporated into application of this tool (S. Grant, pers comm). When using this method in the case study, we took the outputs of the algorithms at face value and did not confirm using expert opinion. 
+One of the methods we consider to estimate CU status for proportion-based LRPs relies on a method of rapidly assessing CU status using multidimensional algorithms.  We implement this approach using a scanner tool that has recently been developed by DFO's State of the Salmon Program (@pestalAlgorithmsRapidStatus2021, in prep). The scanning tool is intended to support implementation of Canada's WSP by approximating the outcomes of full WSP Integrated Status Assessments on an more regular basis than the time-intensive WSP assessment approach allows. The rapid multidimensional scanning tool was developed using Classification and Regression Tree (CART) analyses to create algorithms that approximate the status of the integrated assessments.  Data inputs and outcomes from thee WSP assessment processes were used in CART analyses: Fraser River sockeye, Interior Fraser coho, and Southern BC Chinook [@dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @dfo2017FraserSockeye2018;  @grant2017FraserSockeye2020], and was further ground-truthed with data for Fraser River Chum and Pink Salmon (Pestal et al. in prep ).  <!--CH comment: may need to change the pestal citation to S. Grant, pers comm.  I'm not sure how much the Pink and Chum work will be captured in the report?-->. Essentially, the scanning tool uses a decision tree to estimate CU status based on data type, quality, abundance, and trends (e.g., Figure \@ref(fig:decision-tree)). An expert review of rapid status results for each CU is intended to be incorporated into application of this tool (S. Grant, pers comm). When using this method in the case study, we took the outputs of the algorithms at face value and did not confirm using expert opinion. 
 
 <!--
 CH comment on last sentence; "with the exception of Interior Fraser River Coho which has been vetted through the State of the Salmon program and local experts (Pestal et al. in prep)"
@@ -70,25 +58,20 @@ The rapid multi-dimensional scanning tool uses generational mean spawner abundan
 
 ## AGGREGATE ABUNDANCE-BASED LRPS{#aggAbundMethods}
 
-Aggregate abundance-based LRPs represent the SMU-level abundance at which there is a sufficiently high probability that 100% of CUs (the same % as used for proportion-based LRPs) will be above a single selected benchmark, which is a proxy for above the red zone in our case study applications. <!--CH: should we mention here that, "The Rapid Multidimensional Scanner Tool was considered in preliminary analyses for aggregate-abundance based LRPs but dismissed for computational reasons, see below."?-->This definition requires a decision to be made about what represents a 'sufficiently high probability' that 100% of CUs will be above their benchmarks. We consider four alternative probability levels for our case studies that represent a range of calibrated probability categories developed by the Intergovernmental Panel on Climate Change [@frameGuidanceNoteLead2010]: 50%, 66%, 90%, and 99%. The 50% value represents the mid-point of the "About as likely as not" category (33 - 66%), indicating that there is an equal probability that all CUs will be above their LBMs as there is that they will not. The 66% values represents the lower end of the "Likely" category (i.e., it is "Likely" that all CUs will be above their LBMs), the 90% value represents the lower end of the "Very Likely" category, and the 99% value represents the "Virtually Certain" category. A discussion of considerations for selecting the appropriate probability threshold when calculating abundance-based LRPs is included in (Holt et al. in review).
+Aggregate abundance-based LRPs represent the SMU-level abundance at which there is a sufficiently high probability that 100% of CUs (the same % as used for proportion-based LRPs) will be above a single selected benchmark. When developing aggregate abundance-based LRPs, status relative to a single benchmark is used a proxy for above the red zone. The Rapid Multidimensional Scanner Tool was considered in preliminary analyses as way to identify 'red' status for aggregate-abundance based LRPs, but we dismissed it for computational reasons that are described below. The above definition of aggregate abundance-based LRPs requires a decision to be made about what represents a 'sufficiently high probability' that 100% of CUs will be above their benchmarks. We consider four alternative probability levels for our case studies that represent a range of calibrated probability categories developed by the Intergovernmental Panel on Climate Change [@frameGuidanceNoteLead2010]: 50%, 66%, 90%, and 99%. The 50% value represents the mid-point of the "About as likely as not" category (33 - 66%), indicating that there is an equal probability that all CUs will be above their LBMs as there is that they will not. The 66% values represents the lower end of the "Likely" category (i.e., it is "Likely" that all CUs will be above their LBMs), the 90% value represents the lower end of the "Very Likely" category, and the 99% value represents the "Virtually Certain" category. A discussion of considerations for selecting the appropriate probability threshold when calculating abundance-based LRPs is included in (Holt et al. in review).
  
-We consider two types of aggregate abundance-based LRPs in our case studies: Logistic regression-based LRPs and Projection-based LRPs. Logistic regression LRPs are estimated using historical data, and thus represent conditions that have been previously experienced by a SMU. In comparison, projection-based LRPs use historical data as a basis for quantifying population dynamics, but are based on projections of future states, and thus, allow uncertainty in future processes to be accounted for through alternative scenarios. <!--CH suggestion to add next sentence-->. Thus projection-based LRPs overcomes one key short-coming of the logistic-regression based LRP that historical conditions might not represent current (or future) conditions, by allowing the user to specify model structure and parameter estimates and their uncertainties that reflect the best-available science on current (or future) dynamics.
+We consider two types of aggregate abundance-based LRPs in our case studies: Logistic regression-based LRPs and Projection-based LRPs. Logistic regression LRPs are estimated using historical data, and thus represent conditions that have been previously experienced by a SMU. In comparison, projection-based LRPs use historical data as a basis for quantifying population dynamics, but are based on projections of future states, and thus, allow uncertainty in future processes to be accounted for through alternative scenarios. Thus projection-based LRPs overcomes one key short-coming of the logistic-regression based LRP that historical conditions might not represent current (or future) conditions, by allowing the user to specify model structure and parameter estimates and their uncertainties that reflect the best-available science on current (or future) dynamics.
 
-Within both the logistic regression- and projection-based LRP estimation routines, <!--CH suggestion: I think we should first mention that we're using a single metric instead of the multidimensional approach, and then describe how we're using raw annual spawner abundances. This is consistent for both logistic regression and projection-based methods, so can be mentioned here, though admittedly the reasons do differ. I've moved some text up the the next section-->we characterize annual CU status using a single metric, spawner abundances relative to benchmarks instead of using the Rapid Multidimensional Scanner Tool as in the proportion-based LRPs. While in theory, estimates of CU status used in the aggregate-abundance based methods could be derived from the rapid multidimensional scanning tool, we found little evidence of a statistical relationship between between multidimensional CU status and aggregate spawner abundance for the one case study we considered this approach for: Interior Fraser Coho. In addition, projection-based LRPs are derived from an equilibrium model that does not incorporate temporal dynamics required for assessment of trends in the Rapid Multidimensional Scanner Tool. As a result, we rely on status estimated from a single lower benchmark metric (e.g., $S_{gen}$) rather than the multidimensional scanner tool to develop aggregate-abundance based LRPs in our case studies. We provide further discussion of this result within the Interior Fraser Coho case study section of this paper. 
+Within both the logistic regression- and projection-based LRP estimation routines, we characterize annual CU status using a single metric, spawner abundances relative to benchmarks instead of using the Rapid Multidimensional Scanner Tool as in the proportion-based LRPs. While in theory, estimates of CU status used in the aggregate-abundance based methods could be derived from the rapid multidimensional scanning tool, we found little evidence of a statistical relationship between between multidimensional CU status and aggregate spawner abundance for the one case study we considered this approach for: Interior Fraser Coho. In addition, projection-based LRPs are derived from an equilibrium model that does not incorporate temporal dynamics required for assessment of trends in the Rapid Multidimensional Scanner Tool. As a result, we rely on status estimated from a single lower benchmark metric (e.g., $S_{gen}$) rather than the multidimensional scanner tool to develop aggregate-abundance based LRPs in our case studies. We provide further discussion of this result within the Interior Fraser Coho case study section of this paper. 
 
-In addition, we characterize annual CU status using raw annual spawner abundances instead of generational averages. This approach is based on preliminary analyses that showed using raw spawner abundances improved the spread in the data used to establish a relationship between CU status and aggregate spawning abundance. Furthermore, using generational means in the logistic regression-based approach led to considerable autocorrelation in the aggregate abundance time series, violating assumptions of the logistic regression. We therefore used raw annual spawner abundances within the estimation routines for aggregate-abundance based LRPs. However, we used generational averages of aggregate spawner abundances when assessing SMU-level status relative to the aggregate abundance-based LRPs to reduce noise in annual decisions about whether an LRP had been breached related to variability in cohorts within a generation.  The decision to use generational averages of aggregate spawner abundances when determining whether an LRP is breached is consistent with the approach used for proportion-based LRPs. In both cases, the underlying metric being used to determine SMU status (either aggregate abundance or CU-level status of component CUs for the proportion-based approach) is based on generational-averaged values in order to reduce annual fluctuations in status related to independent cohorts within a generation. 
 
-<!-- KH question: Does the above paragraph read ok?? Or, is it too confusing to follow? 
-CH: I think it's as clear as it can be. A made a few edits to it, specifically including the idea of smoothing over independent cohorts within a generation.-->
+
+In addition, we characterize annual CU status using raw annual spawner abundances instead of generational averages when estimating aggregate abundance-based LRPs. This approach is based on preliminary analyses of the logistic regression-based method <!-- KH (Nov 19) just added "of the logistic regression-based method"--> that showed using raw spawner abundances improved the spread in the data used to establish a relationship between CU status and aggregate spawning abundance. Furthermore, using generational means in the logistic regression-based approach led to considerable autocorrelation in the aggregate abundance time series, violating assumptions of the logistic regression. We therefore used raw annual spawner abundances within the estimation routines for aggregate-abundance based LRPs. However, we used generational averages of aggregate spawner abundances when assessing SMU-level status relative to the aggregate abundance-based LRPs to reduce noise in annual decisions about whether an LRP had been breached related to variability in cohorts within a generation.  The decision to use generational averages of aggregate spawner abundances when determining whether an LRP is breached is consistent with the approach used for proportion-based LRPs. In both cases, the underlying metric being used to determine SMU status (either aggregate abundance or CU-level status of component CUs for the proportion-based approach) is based on generational-averaged values in order to reduce annual fluctuations in status related to independent cohorts within a generation. 
 
 
 ### Logistic regression-based LRPs{#logisticMethods}
 
-Logistic regression-based LRPs (also called Logistic regression LRPs) are derived from an empirically estimated relationship between CU-level status and aggregate SMU abundance. Using this approach, the LRP represents the aggregate abundance level that has historically been associated with a given probability of 100% of CUs having status above 'poor'. <!--CH: I moved this text to the paragraph above: "While in theory, estimates of CU status used in the logistic regression could come from the rapid multidimensional scanning tool, we found little evidence of a statistical relationship between between multidimensional CU status and aggregate spawner abundance for the one case study we considered this approach for: Interior Fraser Coho. As a result, we rely on status estimated from a single lower benchmark metric (e.g., $S_{gen}$) rather than the multidimensional scanner tool to develop logistic-regression-based LRPs in our case studies. We provide further discussion of this result within the Interior Fraser Coho case study section of this paper."  -->
-
-<!-- KH question: does this above mention of the multi-dimensional approach paired with logistic regression work at this point in the method -->
-
-For each year of observed data, CU-level status is quantified as a Bernoulli variable: 1 (success) = all CUs have estimated status greater than their lower benchmark (LBM) and 0 (failure) = all CUs did not have status > LBM. A logistic regression is then fit to predict the probability that all CUs will have status > LBM as a function of aggregate spawner abundance to the SMU using the logistic regression equation:
+Logistic regression-based LRPs (also called Logistic regression LRPs) are derived from an empirically estimated relationship between CU-level status and aggregate SMU abundance. Using this approach, the LRP represents the aggregate abundance level that has historically been associated with a given probability of 100% of CUs having status above a selected lower benchmark. For each year of observed data, CU-level status is quantified as a Bernoulli variable: 1 (success) = all CUs have estimated status greater than their lower benchmark (LBM) and 0 (failure) = all CUs did not have status > LBM. A logistic regression is then fit to predict the probability that all CUs will have status > LBM as a function of aggregate spawner abundance to the SMU using the logistic regression equation:
 
 \begin{equation}
   \log(\frac{p}{1-p}) = B_0 + B_1 \sum_{i}^{i=nCUs} S_{i,t}
@@ -112,10 +95,13 @@ We initially considered an alternative approach to logistic regression in which 
 
 <!--CH: I suggest we add a sentence or two about  how we used TMB (with reference to [@kristensen_tmb_2016]) to estimate parameters, because this platform allowed us to implement a statistically integrated approach-->
 
+<!--
+KH: TO DO: add the sentences and reference Carrie suggests above.
+-->
+
 ##### Logistic Regression Model Diagnostics
 
-There are several assumptions associated with logistic regression, of which four that are relevant for our application to LRPs are listed below. Model diagnostics were applied to evaluate the extent to which those assumptions were met, as well as statistical significance of model coefficients, goodness-of-fit, and classification accuracy of LRPs developed from the logistic regression. <!-- CH remove?: All analyses were implemented using R v.4.0.4 unless otherwise specified [@rcoreteamLanguageEnvironmentStatistical2021]. --> 
-<!--CH: perhaps we should leave the reference to R version (i.e. previous sentence) out because we each are using different versions of R, and each section is lead by a different PI, so different R version which is more confusing than helpful.-->  The three assumptions are as follows:
+There are several assumptions associated with logistic regression, of which four that are relevant for our application to LRPs are listed below. Model diagnostics were applied to evaluate the extent to which those assumptions were met, as well as statistical significance of model coefficients, goodness-of-fit, and classification accuracy of LRPs developed from the logistic regression. The three assumptions are as follows:
 
 1. The relationship between aggregate abundance and log-odds (the logarithm of the odds of all CUs being above their lower benchmark) is linear.
 
@@ -171,8 +157,7 @@ We recommend identifying influential outliers using leverage statistics where po
 
 **Statistical significance of model coefficients**
 
-Statistical significance of coefficients was evaluated using the Wald test statistic, calculated from the ratio of the model coefficient to the standard error of that coefficient, which is assumed to be normally distributed. Test statistics and significance were estimated within TMB [@kristensen_tmb_2016]. <!-- Not needed: P-values <0.05 indicate that the null hypothesis of the coefficient being equalt to 0 is rejected [@fox_applied_2016].-->
-
+Statistical significance of coefficients was evaluated using the Wald test statistic, calculated from the ratio of the model coefficient to the standard error of that coefficient, which is assumed to be normally distributed. Test statistics and significance were estimated within TMB [@kristensen_tmb_2016]. 
 
 **Goodness-of-fit**
 
@@ -191,7 +176,7 @@ where $d_0$ are the deviance residuals for the null model. The psuedo-$R^2$ is a
 Dobson AJ and Barnett AG (2008) An Introduction to Generalized Linear Models. Third Edition. Chapman & Hall/CRC Press. 
 -->
 
-In addition, the length of available time-series will impact power to detect significant model coefficients, and coefficient estimates may be biased when time-series are short.  @peduzziSimulationStudyNumber1996 recommend a minimum of 10 data points for the least frequent outcome to avoid biases in model coefficients, based on simulation study of epidemiological data. For example, if the frequency of outcomes were 0.5 and 0.5 (for 0 and 1, respectively), then a sample size of at least 10/0.5 = 20 would be sufficient, and this minimum sample size would be higher if the data were skewed, e.g., if frequency of outcomes were 0.7 and 0.3, the minimum sample size would be 10/0.3 = 33. <!-- CH I wrote this next sentence, but am not actually sure it's true so am hesitant about including: "That study was based on epidemiological analyses which typically permit only very low type 1 errors."-->A similar evaluation of sample sizes to minimize biases logistic-regression based LRPs for fisheries applications is warranted. Although it is possible to estimate LRPs with lower sample sizes, the risks of biases in model parameters (and LRPs) increases.
+In addition, the length of available time-series will impact power to detect significant model coefficients, and coefficient estimates may be biased when time-series are short.  @peduzziSimulationStudyNumber1996 recommend a minimum of 10 data points for the least frequent outcome to avoid biases in model coefficients, based on simulation study of epidemiological data. For example, if the frequency of outcomes were 0.5 and 0.5 (for 0 and 1, respectively), then a sample size of at least 10/0.5 = 20 would be sufficient, and this minimum sample size would be higher if the data were skewed, e.g., if frequency of outcomes were 0.7 and 0.3, the minimum sample size would be 10/0.3 = 33. A similar evaluation of sample sizes to minimize biases logistic-regression based LRPs for fisheries applications is warranted. Although it is possible to estimate LRPs with lower sample sizes, the risks of biases in model parameters (and LRPs) increases.
 
 **Classification accuracy of LRPs**
 
@@ -200,7 +185,7 @@ Classification accuracy was evaluated based on the ratio of successful classific
 
 ### PROJECTION-BASED LRPS{#projectedMethods}
 
-The projection-based LRP approach combines information on population dynamics of individual CUs within an SMU and then uses that information to project abundances into the future. Projection-based LRPs are then estimated using projected future CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs will be above their lower benchmarks (e.g. $S_{gen}$) at equilibrium given a specified level of exploitation. Specifically, projections are run until the distribution of abundances stabilize for each CU. <!--CH should we expand on this, or does this make sense?--> This projection-based LRP approach allows for explicit consideration of uncertainty as the user can specify various projection scenarios to reflect lack of biological or fisheries information. As with logistic regression-based LRPs, we relied on status estimated from a single metric rather than the multidimensional scanner tool to develop LRPs using projections. <!--CH I suggest removing this next sentence, as the LRP would be exactly specific to the current abundances, the time-period for the projections, as well as exploitation rates in the projection. It seems odd to have a different LRP depending on current abundances and time-frame. If projections are run from current abundances for along period, then long-term trend will be relatively flat, affecting that part of the multidimensional status. If projections are run for only a few generations, the long-term trend would be steep depending on current abundance and ER. --> <!--Future extensions of this approach may want to consider applying the multidimensional scanner tool within forward projections to classify CU status. -->
+The projection-based LRP approach combines information on population dynamics of individual CUs within an SMU and then uses that information to project abundances into the future. Projection-based LRPs are then estimated using projected future CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs will be above their lower benchmarks (e.g. $S_{gen}$) at equilibrium given a specified level of exploitation. Specifically, projections are run until the distribution of abundances stabilize for each CU. <!--CH should we expand on this, or does this make sense? --> <!-- KH: maybe change to "... run until the relationship between aggregate abundance and the probability of all CUS being above their lower benchmark stabilized" ??? --> This projection-based LRP approach allows for explicit consideration of uncertainty as the user can specify various projection scenarios to reflect lack of biological or fisheries information. As with logistic regression-based LRPs, we relied on status estimated from a single metric rather than the multidimensional scanner tool to develop LRPs using projections.
 
 We used the samSim closed loop simulation modelling tool to conduct stochastic projections for our case study applications. samSim is an R package that was developed to quantify recovery potential for Pacific salmon populations [@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020]. We created a modified version of samSim to support LRP estimation. The LRP version of samSim is described in detail in Appendix  \@ref(app:samsim-appendix), while model code is available on GitHub at: https://github.com/Pacific-salmon-assess/samSim/tree/LRP.  
 
@@ -210,7 +195,9 @@ The following steps were taken to calculate projection-based LRPs:
 
    1. Use samSim to project spawner abundances forward for $nYears$ over $nTrial$ stochastic simulations, under a specified exploitation rate.
    
-   <!--CH: I added "under a specified exploitation rate" to match the text in the 1st pgh of this subsection. I wonder if future projection-based LRPs could include other types of MPs that more accurately match current management approach, if it deviates from a constant ER? Does that make sense?-->
+   <!--CH: I added "under a specified exploitation rate" to match the text in the 1st pgh of this subsection. I wonder if future projection-based LRPs could include other types of MPs that more accurately match current management approach, if it deviates from a constant ER? Does that make sense?  
+   KH: I think it could make sense, although I wonder if it would raise more questions about whether to represent observation / assmt error, etc to replicate the MP.  If these were done though, it would start to feel more like an MSE, but with backwards purpose.  Instead of evaluating MPs based on their performance to stay above a LRP, we are trying to accurately represent an MP to learn what the LRP is.  I worry that this could get people confused and turned around pretty quickly.
+   -->
 
 
    2. For each simulated year-trial combination, characterize abundances as follows:
